# neural-net-classifier

./: .gitpod.yml  Main.py  Model.py  README.md  main.py  neural_net.py  nnclassifier.ipynb  pyproject.toml  requirements.txt  setup.cfg  train.ipynb  train.py
model/: neural_net.py
models/: example2.model  kmeans.joblib
src/nnc/: __main__.py  nnclassifier.py  paint.py  util.py
src/nnclassifier/: __main__.py  canvas.py  nnclassifier.py  paint.py
theory/: neural_networks.aux  neural_networks.tex
trained_model/: nn2.joblib
