[metadata]
name = nnclassifier
description = Neural network implementation for recognizing hand-written digits
long_description = file: README.md
long_description_content_type = text/markdown
author = Joey Shi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
install_requires =
    joblib
    numpy
    scikit-learn
    scipy
    sklearn
    tqdm

[options.packages.find]
where=src

[options.package_data]
nnc = py.typed

[options.entry_points]
console_scripts =
        nnc = nnc.__main__:main

[flake8]
max-line-length = 160
